--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 <script>
 // Your web app's Firebase configuration
 const firebaseConfig = {
-  apiKey: "AIzaSyB4zEz1KzqS1dy_QtRB5qzGHPmTWle_0z0",
-  authDomain: "fruit-catcher-17e7c.firebaseapp.com",
-  projectId: "fruit-catcher-17e7c",
-  storageBucket: "fruit-catcher-17e7c.appspot.com",
-  messagingSenderId: "404431166465",
-  appId: "1:404431166465:web:b3c825b840dc92005e3400"
+  apiKey: "AIzaSyCTvbO_ABy8O0VrF6adtPJMmPABiF38cAo",
+  authDomain: "race-jungle-d8a1a.firebaseapp.com",
+  projectId: "race-jungle-d8a1a",
+  storageBucket: "race-jungle-d8a1a.appspot.com",
+  messagingSenderId: "895110841348",
+  appId: "1:895110841348:web:fcce3cbb2a457de250e151"
 };
 // Initialize Firebase
 firebase.initializeApp(firebaseConfig);
